<resources>
    <string name="app_name">Gazt</string>
    <string name="loading">Please wait…</string>
    <string name="health">Health</string>
    <string name="signin">Sign in</string>
    <string name="start">Start</string>
    <string name="name">Alicia Scott</string>
    <string name="date">Today 03:14PM </string>
    <string name="empty_list">oops, List is empty.</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="not_clicked">not_clicked</string>
    <string name="clicked">clicked</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="popular_persons">Popular persons</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In imperdiet non tellus at auctor. Fusce quis nisi vel tortor maximus volutpat. Duis congue diam lorem, at commodo turpis tincidunt eu. Nunc dignissim purus quis nunc consequat, sed blandit urna sagittis. Etiam eu condimentum ligula, ut volutpat urna. Integer vel lacus eu dui suscipit dapibus. Aenean enim turpis, accumsan id justo id, commodo elementum dui. Proin in nibh nec ante semper varius. Fusce facilisis, elit eu pulvinar vehicula, sem risus mattis mi, non commodo risus urna ut sapien. Morbi mollis dignissim gravida. Morbi lobortis erat et eros pulvinar, sed interdum elit sollicitudin. Sed eleifend neque non pharetra tincidunt. Fusce libero risus, luctus sed venenatis et, elementum at turpis. In hac habitasse platea dictumst. Vivamus luctus dapibus nulla nec viverra. Morbi nec lacus et sapien laoreet porttitor eu vitae nulla. Lorem ipsum dolor sit amet, consectetur adipiscing elit. In imperdiet non tellus at auctor. Fusce quis nisi vel tortor maximus volutpat. Duis congue diam lorem, at commodo turpis tincidunt eu. Nunc dignissim purus quis nunc consequat, sed blandit urna sagittis. Etiam eu condimentum ligula, ut volutpat urna. Integer vel lacus eu dui suscipit dapibus. Aenean enim turpis, accumsan id justo id, commodo elementum dui. Proin in nibh nec ante semper varius. Fusce facilisis, elit eu pulvinar vehicula, sem risus mattis mi, non commodo risus urna ut sapien. Morbi mollis dignissim gravida. Morbi lobortis erat et eros pulvinar, sed interdum elit sollicitudin. Sed eleifend neque non pharetra tincidunt. Fusce libero risus, luctus sed venenatis et, elementum at turpis. In hac habitasse platea dictumst. Vivamus luctus dapibus nulla nec viverra. Morbi nec lacus et sapien laoreet porttitor eu vitae nulla.</string>
    <string name="gazt_invite">GAZT invites businesses to file value-added tax returns for the months of April and July</string>
    <string name="loading_more">Loading More…</string>
    <string name="lorem_cell">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In imperdiet non tellus at auctor. </string>
    <string name="favorite_news">Favorite</string>
    <string name="favorites">Favorites</string>
    <string name="details">Details</string>
    <string name="news_list">News</string>
    <string name="latest_news">Latest</string>
    <string name="news">News</string>
    <string name="share_using">Share Using</string>
    <string name="added_to_favourites">Added to favourites</string>
    <string name="removed_from_favourites">Removed From favourites</string>
    <string name="announcements">Announcements</string>
    <string name="latest_announcements">Latest</string>
    <string name="favorite_announcements">Favorite</string>
    <string name="attachments">Attachments</string>
    <string name="urgent">Urgent</string>
    <string name="medium">Medium</string>
    <string name="normal">Normal</string>
    <string name="there_s_no_news_yet">There’s no News yet</string>
    <string name="there_s_no_internal_news_yet">There’s no Internal News yet</string>
    <string name="there_s_no_fav_news_yet">There’s no favorite News yet</string>
    <string name="there_s_no_internal_fav_news_yet">There’s no favorite Internal News yet</string>
    <string name="please_try_after_sometime">Please Try after sometime</string>
    <string name="internal_news">Internal News</string>
    <string name="view_all">View All</string>
    <string name="see_all">See All</string>
    <string name="dashboard">Dashboard</string>
    <string name="my_profile">My Profile</string>
    <string name="sign_out">Sign-out</string>
    <string name="about_diwan">About DIWAN</string>
    <string name="diwan_home">Diwan Home</string>
    <string name="my_dashboard">Dashboard</string>
    <string name="my_inbox">My Inbox</string>
    <string name="my_development">My Development</string>
    <string name="my_performance">My Performance</string>
    <string name="my_academy">My Academy</string>
    <string name="gazt_apps">GAZT Applications</string>
    <string name="my_calender">My Calender</string>
    <string name="my_reporting">My Reporting</string>
    <string name="added_to_favourite">Added to favourite</string>
    <string name="removed_from_favourite">Removed from favourite</string>
    <string name="no_favourite_announcements_yet">There’s no favorite Announcements yet</string>
    <string name="there_s_no_announcements_yet">There’s no Announcements yet</string>
    <string name="sucess_added_news_to_favorite">News is added to favorite successfully</string>
    <string name="success_removed_news_from_favorite">News is removed from favorite successfully</string>
    <string name="announcement">Announcement</string>
    <string name="event_history">Event History</string>
    <string name="no_upcoming_events">No Upcoming Events</string>
    <string name="to">To</string>
    <string name="latest_internal_news">Latest</string>
    <string name="favorite_internal_news">Favorite</string>
    <string name="Terms">Terms</string>
    <string name="available_until">Available until </string>
    <string name="more_details">More Details</string>
    <string name="valid_to">Valid to </string>
    <string name="our_offers">Our Offers</string>
    <string name="special_offers">Special Offers</string>
    <string name="filter_by">Filter By</string>
    <string name="reset">Reset</string>
    <string name="reset_all">Reset All</string>
    <string name="promo_code">Promo Code</string>
    <string name="my_settings">My Settings</string>
    <string name="manage_your_account_settings_password_notifications_your_prefered_language">Manage your account settings. Notifications &amp; your preferred Language.</string>
    <string name="notifications">Notifications</string>
    <string name="language">Language</string>
    <string name="delegations_Setting">Delegates</string>
    <string name="You_have_no_delegations">You have no Delegations</string>
    <string name="Start_by_adding_delegates_for_you">Start by adding delegates for you</string>
    <string name="add_New">Add delegate</string>
    <string name="Type">Type:</string>
    <string name="delegates">Delegates</string>
    <string name="choose_the_preferred_language">Choose the Preferred Language.</string>
    <string name="arabic">Arabic</string>
    <string name="english">English</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="there_is_no_offers_yet">There is no offers yet</string>
    <string name="sar"> SAR</string>
    <string name="newest">Newest</string>
    <string name="oldest">Oldest</string>
    <string name="select_category">Category</string>
    <string name="sorting">Sorting</string>
    <string name="basic_information">Basic Information</string>
    <string name="my_information">My Information</string>
    <string name="dependents">Dependents</string>
    <string name="payroll_information">Bank Account</string>
    <string name="payroll">Payroll Information</string>
    <string name="employment_information">Employment Details</string>
    <string name="career">Careers</string>
    <string name="takleef_information">Takleef Information</string>
    <string name="team_members">Team members</string>
    <string name="services">Services</string>
    <string name="all">All</string>
    <string name="show_all">Show All</string>
    <string name="about">About</string>
    <string name="shehab_elsarky">Mohammed AlSuwailem</string>
    <string name="ibrahem">Ibrahim Farag</string>
    <string name="software_developer">Business Developer</string>
    <string name="direct_manager">Direct Manager</string>
    <string name="direct_manager_placeholder">Please Select Direct Manager</string>
    <string name="software_development">Business Development Department</string>
    <string name="email_request">Email Request</string>
    <string name="there_is_no_internet_connection">There is no internet connection</string>
    <string name="okay">OK</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="internal_server_error">Internal Server Error</string>
    <string name="unknown_host">Unknown Host</string>
    <string name="please_check_your_internet_connection_and_try_again">Please check your internet connection and try again</string>
    <string name="categories">Categories</string>
    <string name="HR">HR</string>
    <string name="check_all_requests_received_and_sent">Check all requests received and sent .</string>
    <string name="what_category_are_you_looking_in">What Category are you looking in?</string>
    <string name="human_resources">Human Resources</string>
    <string name="personal">Personal Information</string>
    <string name="contact_address">Contact &amp; Addresses</string>
    <string name="contact">Contact &amp; Addresses</string>
    <string name="emergency">Emergency Contacts</string>
    <string name="emergency_contact">Emergency Contacts</string>
    <string name="personal_information">Personal Information</string>
    <string name="business_department">Business Department</string>
    <string name="diwan_version">DIWAN v%s © 2021</string>
    <string name="employment_certificate_with_salary_details_pdf">Employment Certificate With Salary Details.Pdf</string>
    <string name="first_name_en">First Name(En)</string>
    <string name="second_name_en">Second Name(En)</string>
    <string name="third_name_en">Third Name(En)</string>
    <string name="last_name_en">Last Name(En)</string>
    <string name="first_name_ar">First Name(Ar)</string>
    <string name="second_name_ar">Second Name(Ar)</string>
    <string name="third_name_ar">Third Name(Ar)</string>
    <string name="last_name_ar">Last Name(Ar)</string>
    <string name="Mohsen">Mohesen</string>
    <string name="hr">Human Resources</string>
    <string name="security">Security</string>
    <string name="maintenance">Maintenance</string>
    <string name="it">Information Technology</string>
    <string name="emp_benefits">Employee Benefits</string>
    <string name="mohammed_ali">Mohammed Ali</string>
</resources>