<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="@dimen/x30dp"
    android:paddingEnd="@dimen/x30dp">


    <Button
        android:id="@+id/btn_sign_out"
        style="?borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_sign_out"
        android:drawablePadding="@dimen/x8dp"
        android:fontFamily="@font/sst_arabic_bold"
        android:text="@string/sign_out"
        android:textAllCaps="false"
        android:textColor="@color/date_green"
        android:textSize="@dimen/x14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:id="@+id/tv_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sst_arabic_roman"
        android:text="@string/diwan_version"
        android:textColor="@color/blue_grey"
        android:textSize="@dimen/x12sp"
        app:layout_constraintBottom_toBottomOf="@id/btn_sign_out"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/btn_sign_out" />


    <View
        android:id="@+id/divider_footer"
        android:layout_width="match_parent"
        android:layout_height="@dimen/x1_5dp"
        android:layout_marginBottom="@dimen/x10dp"
        android:background="@color/blue_grey"
        app:layout_constraintBottom_toTopOf="@id/btn_sign_out" />

    <Button
        style="?borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/x10dp"
        android:fontFamily="@font/sst_arabic_bold"
        android:text="@string/about_diwan"
        android:textAllCaps="false"
        android:textColor="@color/dark_blue_green"
        android:textSize="@dimen/x11sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@id/divider_footer"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>