<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="300dp"
    android:layout_marginStart="@dimen/x20dp"
    android:layout_marginEnd="@dimen/x20dp"
    android:background="#00555555"
    android:fitsSystemWindows="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:layoutDirection="locale"
    android:orientation="vertical"
    android:textDirection="locale"
    app:cardCornerRadius="18dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:id="@+id/dialogImg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_no_internet" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/sst_arabic_bold"
            android:gravity="center_horizontal"
            android:lineSpacingExtra="7sp"
            android:text="@string/no_internet_connection"
            android:textColor="#23292f"
            android:textSize="14sp" />


        <TextView
            android:id="@+id/tvDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/sst_arabic_roman"
            android:gravity="center_horizontal"
            android:text="@string/please_check_your_internet_connection_and_try_again"
            android:textColor="#868894"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/btn_ok"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:background="@color/squash"
            android:fontFamily="@font/sst_arabic_roman"
            android:gravity="center"
            android:paddingStart="8dp"
            android:paddingTop="5dp"
            android:paddingEnd="8dp"
            android:paddingBottom="8dp"
            android:text="@string/okay"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>
</androidx.cardview.widget.CardView>